--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Trading Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="main.js"></script>
 </head>
 <body>
     <div class="calculator-container">
         <h1 class="calculator-title">Stock Trading Calculator</h1>
         <p class="calculator-subtitle">Smart position sizing for safer trading - never risk too much on a single trade</p>
 
-        <!-- Theme Toggle -->
         <div class="theme-toggle-container">
-            <label class="theme-toggle" for="theme-switch">
-                <input type="checkbox" id="theme-switch" aria-label="Toggle dark mode">
+            <label class="theme-toggle">
+                <input type="checkbox" id="theme-switch">
                 <span class="toggle-track">
                     <span class="toggle-indicator">
                         <span class="toggle-icon light">☀️</span>
@@ -24,28 +24,25 @@
             </label>
         </div>
 
-        <!-- Main Calculator Section -->
-        <section class="calculator-section" data-section="calculator">
+        <div class="calculator-section">
             <div class="grid">
-                <!-- Account Information -->
                 <div>
                     <h2 class="section-title">Account Information</h2>
-
                     <div class="input-group">
-                        <label class="input-label" for="accountSize">Account Size ($)</label>
+                        <label for="accountSize" class="input-label">Account Size ($)</label>
                         <div class="input-container">
                             <span class="input-prefix">$</span>
-                            <input type="text" id="accountSize" class="text-input" placeholder="Enter account size (e.g. 10,000)" required>
+                            <input type="text" id="accountSize" class="text-input" placeholder="100,000">
                         </div>
-                        <div class="helper-text">Use shorthand: 10k = $10,000 or 1.5m = $1,500,000</div>
+                        <p class="helper-text">Use shorthand: 10k = $10,000 or 1.5m = $1,500,000</p>
                     </div>
 
                     <div class="input-group">
+                        <label for="riskPercentage" class="input-label">Risk per Trade (%)</label>
                         <div class="risk-header">
-                            <label class="input-label" for="riskPercentage">Risk per Trade (%)</label>
-                            <button type="button" id="quickScenariosButton" class="quick-scenarios-button" aria-expanded="false">
-                                <span id="quickScenariosIcon" class="scenarios-icon">📊</span>
-                                Risk Scenarios
+                            <span class="input-label">Risk Scenarios</span>
+                            <button type="button" class="quick-scenarios-button" id="quickScenariosButton" aria-expanded="false">
+                                <span class="scenarios-icon" id="scenariosIcon">📊</span> Risk Scenarios
                             </button>
                         </div>
                         <div class="risk-buttons">
@@ -56,205 +53,203 @@
                             <button type="button" class="risk-button active" data-value="1">1%</button>
                         </div>
                         <div class="input-container">
-                            <input type="number" id="riskPercentage" class="number-input number-input-pct" value="1" min="0" max="100" step="0.05" required>
+                            <input type="number" id="riskPercentage" class="number-input number-input-pct" value="1" step="0.01" min="0" max="100">
                             <span class="input-suffix">%</span>
                         </div>
                     </div>
+
+                    <!-- New Max Account Risk Size Field -->
+                    <div class="input-group">
+                        <label for="maxAccountRiskSize" class="input-label">Max Account Risk Size (% of Account) - Optional</label>
+                        <div class="input-container">
+                            <input type="number" id="maxAccountRiskSize" class="number-input number-input-pct" value="" placeholder="50" step="0.1" min="0" max="100">
+                            <span class="input-suffix">%</span>
+                        </div>
+                        <p class="helper-text">Caps position size (e.g., 50% = $50,000 for a $100,000 account)</p>
+                    </div>
                 </div>
 
-                <!-- Trade Details -->
                 <div>
                     <h2 class="section-title">Trade Details</h2>
-
                     <div class="input-group">
-                        <label class="input-label" for="entryPrice">Entry Price ($)</label>
+                        <label for="entryPrice" class="input-label">Entry Price ($)</label>
                         <div class="input-container">
                             <span class="input-prefix">$</span>
-                            <input type="text" id="entryPrice" class="text-input" placeholder="Enter entry price">
+                            <input type="number" id="entryPrice" class="number-input" step="0.01" min="0">
                         </div>
                     </div>
 
                     <div class="input-group">
-                        <label class="input-label" for="stopLossPrice">Stop Loss Price ($)</label>
+                        <label for="stopLossPrice" class="input-label">Stop Loss Price ($)</label>
                         <div class="input-container">
                             <span class="input-prefix">$</span>
-                            <input type="text" id="stopLossPrice" class="text-input" placeholder="Enter stop loss price">
+                            <input type="number" id="stopLossPrice" class="number-input" step="0.01" min="0">
                         </div>
-                        <div class="helper-text">Must be below entry price</div>
-                        <div id="stopLossError" class="error-text hidden"></div>
+                        <p class="helper-text">Must be below entry price</p>
+                        <p id="stopLossError" class="error-text hidden"></p>
                     </div>
 
                     <div class="input-group">
-                        <label class="input-label" for="targetPrice">Target Price ($) - Optional</label>
+                        <label for="targetPrice" class="input-label">Target Price ($) - Optional</label>
                         <div class="input-container">
                             <span class="input-prefix">$</span>
-                            <input type="text" id="targetPrice" class="text-input" placeholder="Enter target price (optional)">
+                            <input type="number" id="targetPrice" class="number-input" step="0.01" min="0">
                         </div>
-                        <div class="helper-text">Should be above entry price</div>
-                        <div id="targetPriceError" class="error-text hidden"></div>
+                        <p class="helper-text">Should be above entry price</p>
+                        <p id="targetPriceError" class="error-text hidden"></p>
                     </div>
                 </div>
             </div>
 
-            <button type="button" id="clearButton" class="clear-button">Clear Calculator</button>
+            <button type="button" class="clear-button" id="clearButton">Clear Calculator</button>
 
-            <!-- Calculator Results -->
             <div class="calculator-output">
                 <div class="results-section">
-                    <h3 class="results-title">Results</h3>
+                    <h2 class="results-title">Results</h2>
                     <div class="results-grid">
                         <div class="result-card">
-                            <div class="result-label">Shares to Purchase</div>
-                            <div class="result-value" id="sharesValue">-</div>
+                            <p class="result-label">Shares to Purchase</p>
+                            <p class="result-value large" id="sharesValue">-</p>
                         </div>
+
                         <div class="result-card">
-                            <div class="result-label">Position Size</div>
-                            <div class="result-value large" id="positionSizeValue">-</div>
+                            <p class="result-label">Position Size</p>
+                            <p class="result-value large" id="positionSizeValue">-</p>
                         </div>
+
                         <div class="result-card">
-                            <div class="result-label">Stop Distance</div>
-                            <div class="result-value" id="stopDistanceValue">-</div>
+                            <p class="result-label">Stop Distance</p>
+                            <p class="result-value" id="stopDistanceValue">-</p>
                         </div>
+
                         <div class="result-card">
-                            <div class="result-label">Total Risk Amount</div>
-                            <div class="result-value" id="totalRiskValue">-</div>
+                            <p class="result-label">Total Risk Amount</p>
+                            <p class="result-value" id="totalRiskValue">-</p>
                         </div>
+
                         <div class="result-card">
-                            <div class="result-label">% of Account</div>
-                            <div class="result-value" id="percentOfAccountValue">-</div>
+                            <p class="result-label">% of Account</p>
+                            <p class="result-value" id="percentOfAccountValue">-</p>
                         </div>
+
                         <div class="result-card">
-                            <div class="result-label">R Multiple</div>
-                            <div class="result-value" id="rMultipleValue">- R</div>
+                            <p class="result-label">R Multiple</p>
+                            <p class="result-value" id="rMultipleValue">- R</p>
                         </div>
-                        <div class="result-card full-width five-r-card">
-                            <div class="result-label">5R Target Price <span class="trim-tag">Trim Zone</span></div>
-                            <div class="result-value trim" id="fiveRTargetValue">-</div>
+
+                        <div class="result-card five-r-card">
+                            <p class="result-label">5R Target Price <span class="trim-tag">Trim Zone</span></p>
+                            <p class="result-value trim" id="fiveRTargetValue">-</p>
                         </div>
                     </div>
 
-                    <!-- Profit Section -->
-                    <div id="profitSection" class="profit-section hidden">
+                    <div class="profit-section hidden" id="profitSection">
                         <div class="profit-title">If Target is Hit</div>
                         <div class="profit-grid">
                             <div class="result-card profit-card">
-                                <div class="result-label">Profit Per Share</div>
-                                <div class="result-value profit" id="profitPerShareValue">-</div>
+                                <p class="result-label">Profit Per Share</p>
+                                <p class="result-value profit" id="profitPerShareValue">-</p>
                             </div>
+
                             <div class="result-card profit-card">
-                                <div class="result-label profit-with-button">
+                                <p class="result-label profit-with-button">
                                     Total Profit
-                                    <button type="button" id="addProfitButton" class="add-profit-button" title="Add profit to account">➕</button>
-                                </div>
-                                <div class="result-value profit" id="totalProfitValue">-</div>
+                                    <button class="add-profit-button" id="addProfitButton">➕</button>
+                                </p>
+                                <p class="result-value profit" id="totalProfitValue">-</p>
                             </div>
+
                             <div class="result-card profit-card">
-                                <div class="result-label">Return on Investment</div>
-                                <div class="result-value profit" id="roiValue">-</div>
+                                <p class="result-label">Return on Investment</p>
+                                <p class="result-value profit" id="roiValue">-</p>
                             </div>
+
                             <div class="result-card profit-card">
-                                <div class="result-label">Risk:Reward Ratio</div>
-                                <div class="result-value profit" id="riskRewardValue">-</div>
+                                <p class="result-label">Risk:Reward Ratio</p>
+                                <p class="result-value profit" id="riskRewardValue">-</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Info Section -->
-                <button type="button" id="infoButton" class="info-button" aria-expanded="false">
-                    <span id="infoIcon" class="info-icon">+</span>
+                <button type="button" class="info-button" id="infoButton" aria-expanded="false">
+                    <span class="info-icon" id="infoIcon">+</span>
                     How is position size calculated?
                 </button>
 
-                <div id="infoContent" class="info-content hidden" role="region" aria-expanded="false">
+                <div class="info-content hidden" id="infoContent" aria-expanded="false">
                     <div class="info-header">
                         <h3 class="info-title">How it Works - Example</h3>
                     </div>
-
                     <div class="example-scenario">
-                        <p class="scenario-intro">If you have a <strong>$10,000 account</strong> and want to risk <strong>1%</strong>:</p>
-
+                        <p class="scenario-intro">If you have a $10,000 account and want to risk 1%:</p>
                         <div class="calculation-steps">
                             <div class="calc-step">
                                 <span class="step-label">Your risk budget:</span>
                                 <span class="step-value">$100</span>
                             </div>
-
                             <div class="calc-step">
                                 <span class="step-label">Stock price: $50, Stop loss: $48</span>
                                 <span class="step-value">(risking $2 per share)</span>
                             </div>
-
-                            <div class="calc-step">
+                            <div class="calc-step highlight">
                                 <span class="step-label">Shares to buy:</span>
                                 <span class="step-value">$100 ÷ $2 = 50 shares</span>
                             </div>
-
-                            <div class="calc-step highlight">
+                            <div class="calc-step">
                                 <span class="step-label">Position size:</span>
                                 <span class="step-value">50 × $50 = $2,500</span>
                             </div>
                         </div>
-
                         <div class="info-conclusion">
                             <p>💡 This way, you never risk more than 1% even if the trade goes wrong!</p>
                         </div>
                     </div>
                 </div>
 
-                <!-- Risk Scenarios Section -->
-                <button type="button" id="scenariosButton" class="info-button" aria-expanded="false">
-                    <span id="scenariosIcon" class="info-icon">+</span>
+                <button type="button" class="info-button" id="scenariosButton" aria-expanded="false">
+                    <span class="info-icon" id="scenariosIcon">+</span>
                     Risk Scenarios
                 </button>
 
-                <div id="scenariosContent" class="scenarios-content hidden" role="region" aria-expanded="false">
+                <div class="scenarios-content hidden" id="scenariosContent" aria-expanded="false">
                     <div class="scenarios-grid">
-                        <div class="scenario-item">
+                        <div class="scenario-item" id="scenario-0-1-item">
                             <span class="scenario-risk">0.1% Risk</span>
                             <span class="scenario-details" id="scenario-0-1">-</span>
                         </div>
-                        <div class="scenario-item">
+                        <div class="scenario-item" id="scenario-0-25-item">
                             <span class="scenario-risk">0.25% Risk</span>
                             <span class="scenario-details" id="scenario-0-25">-</span>
                         </div>
-                        <div class="scenario-item">
+                        <div class="scenario-item" id="scenario-0-5-item">
                             <span class="scenario-risk">0.5% Risk</span>
                             <span class="scenario-details" id="scenario-0-5">-</span>
                         </div>
-                        <div class="scenario-item">
+                        <div class="scenario-item" id="scenario-0-75-item">
                             <span class="scenario-risk">0.75% Risk</span>
                             <span class="scenario-details" id="scenario-0-75">-</span>
                         </div>
-                        <div class="scenario-item">
+                        <div class="scenario-item" id="scenario-1-item">
                             <span class="scenario-risk">1% Risk</span>
                             <span class="scenario-details" id="scenario-1">-</span>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <!-- Journal Section Placeholder -->
-        <section class="journal-section hidden" data-section="journal" aria-hidden="true">
+        <div class="journal-section">
             <h2 class="section-title">Trade Journal</h2>
-            <!-- Journal UI will be added here -->
-            <div class="journal-placeholder">
-                <p>Journal feature coming soon...</p>
-            </div>
-        </section>
+            <div class="journal-placeholder">Journal feature coming soon...</div>
+        </div>
 
-        <!-- Footer -->
         <footer class="calculator-footer">
             Made with
-            <svg class="heart-icon" viewBox="0 0 24 24">
-                <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
-            </svg>
-            by Skyler <a href="https://twitter.com/applevisionpro" target="_blank" rel="noopener">@applevisionpro</a>
+            <span class="heart">❤️</span>
+            by Skyler
+            <a href="https://x.com/applevisionpro">@applevisionpro</a>
         </footer>
     </div>
-
-    <!-- Scripts will be modularized -->
-    <script type="module" src="js/main.js"></script>
 </body>
 </html>
