--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Trading Calculator</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </head>
 <body>
     <div class="calculator-container">
