--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="input-group">
                         <label class="input-label" for="maxAccountRisk">Max Account Risk Size (%)</label>
                         <div class="input-container">
-                            <input type="number" id="maxAccountRisk" class="number-input number-input-pct" value=30" min="0" max="100" step="0.05">
+                            <input type="number" id="maxAccountRisk" class="number-input number-input-pct" value="50" min="0" max="100" step="0.05">
                             <span class="input-suffix">%</span>
                         </div>
                         <div class="helper-text">Maximum percentage of your account you're willing to allocate to a single trade</div>
