--- a/index.html
+++ b/index.html
@@ -246,11 +246,7 @@
 
         <!-- Footer -->
         <footer class="calculator-footer">
-            Made with
-            <svg class="heart-icon" viewBox="0 0 24 24">
-                <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
-            </svg>
-            by Skyler <a href="https://twitter.com/applevisionpro" target="_blank" rel="noopener">@applevisionpro</a>
+            Made with 🩵 by Skyler <a href="https://twitter.com/applevisionpro" target="_blank" rel="noopener">@applevisionpro</a>
         </footer>
     </div>
 
