Update footer with social links
- Add X account @skylerber and Discord server link
- Remove @applevisionpro Twitter link
- Keep light blue heart emoji (🩵)
- Clean footer layout with social connections

--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@
 
         <!-- Footer -->
         <footer class="calculator-footer">
-            Made with 🩵 by Skyler <a href="https://twitter.com/applevisionpro" target="_blank" rel="noopener">@applevisionpro</a>
+            Made with 🩵 by Skyler 
+            <a href="https://x.com/skylerber" target="_blank" rel="noopener">@skylerber</a> • 
+            <a href="https://discord.gg/t6BZV9nQ" target="_blank" rel="noopener">Discord</a>
         </footer>
     </div>
 
