--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
                         <div class="helper-text">Should be above entry price</div>
                         <div id="targetPriceError" class="error-text hidden"></div>
                     </div>
+
+                    <div class="input-group">
+                        <label class="input-label" for="tickerSymbol">Ticker Symbol</label>
+                        <div class="input-container">
+                            <span class="input-prefix">$</span>
+                            <input type="text" id="tickerSymbol" class="text-input" placeholder="Enter ticker symbol (optional)">
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -262,9 +270,11 @@
 
         <!-- Footer -->
         <footer class="calculator-footer">
-            Made with 🩵 by Skyler 
-            <a href="https://x.com/skylerber" target="_blank" rel="noopener">@skylerber</a> • 
-            <a href="https://discord.gg/t6BZV9nQ" target="_blank" rel="noopener">Discord</a>
+            <div>Made with 💙 by Skyler</div>
+            <div>
+                <a href="https://x.com/skylerber" target="_blank" rel="noopener">X</a> • 
+                <a href="https://discord.gg/t6BZV9nQ" target="_blank" rel="noopener">Add me on Discord</a>
+            </div>
         </footer>
     </div>
 
