Fix field alignment: add helper text to ticker symbol to match target price field height

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                             <span class="input-prefix">$</span>
                             <input type="text" id="tickerSymbol" class="text-input" placeholder="Enter ticker symbol (optional)">
                         </div>
+                        <div class="helper-text">For tracking and record keeping</div>
                     </div>
                 </div>
             </div>
